[package]
name = "lemonsqueezy"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Unofficial Rust client for the LemonSqueezy API"
repository = "https://github.com/VarunPotti/lemonsqueezy.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
